// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啌
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啊
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
{
  "account-book": 21834,
  "alert": 21835,
  "alipay-circle": 21836,
  "alipay-square": 21837,
  "aliwangwang": 21838,
  "amazon-circle": 21839,
  "amazon-square": 21840,
  "android": 21841,
  "api": 21842,
  "apple": 21843,
  "appstore": 21844,
  "audio": 21845,
  "backward": 21846,
  "bank": 21847,
  "behance-circle": 21848,
  "behance-square": 21849,
  "bell": 21850,
  "bilibili": 21851,
  "book": 21852,
  "box-plot": 21853,
  "bug": 21854,
  "build": 21855,
  "bulb": 21856,
  "calculator": 21857,
  "calendar": 21858,
  "camera": 21859,
  "car": 21860,
  "caret-down": 21861,
  "caret-left": 21862,
  "caret-right": 21863,
  "caret-up": 21864,
  "carry-out": 21865,
  "check-circle": 21866,
  "check-square": 21867,
  "chrome": 21868,
  "ci-circle": 21869,
  "clock-circle": 21870,
  "close-circle": 21871,
  "close-square": 21872,
  "cloud": 21873,
  "code": 21876,
  "code-sandbox-circle": 21874,
  "code-sandbox-square": 21875,
  "codepen-circle": 21877,
  "codepen-square": 21878,
  "compass": 21879,
  "contacts": 21880,
  "container": 21881,
  "control": 21882,
  "copy": 21883,
  "copyright-circle": 21884,
  "credit-card": 21885,
  "crown": 21886,
  "customer-service": 21887,
  "dashboard": 21888,
  "database": 21889,
  "delete": 21890,
  "diff": 21891,
  "dingtalk-circle": 21892,
  "dingtalk-square": 21893,
  "discord": 21894,
  "dislike": 21895,
  "dollar-circle": 21896,
  "down-circle": 21897,
  "down-square": 21898,
  "dribbble-circle": 21899,
  "dribbble-square": 21900,
  "dropbox-circle": 21901,
  "dropbox-square": 21902,
  "edit": 21903,
  "environment": 21904,
  "euro-circle": 21905,
  "exclamation-circle": 21906,
  "experiment": 21907,
  "eye": 21909,
  "eye-invisible": 21908,
  "facebook": 21910,
  "fast-backward": 21911,
  "fast-forward": 21912,
  "file": 21924,
  "file-add": 21913,
  "file-excel": 21914,
  "file-exclamation": 21915,
  "file-image": 21916,
  "file-markdown": 21917,
  "file-pdf": 21918,
  "file-ppt": 21919,
  "file-text": 21920,
  "file-unknown": 21921,
  "file-word": 21922,
  "file-zip": 21923,
  "filter": 21925,
  "fire": 21926,
  "flag": 21927,
  "folder": 21930,
  "folder-add": 21928,
  "folder-open": 21929,
  "format-painter": 21931,
  "forward": 21932,
  "frown": 21933,
  "fund": 21934,
  "funnel-plot": 21935,
  "gift": 21936,
  "github": 21937,
  "gitlab": 21938,
  "gold": 21939,
  "golden": 21940,
  "google-circle": 21941,
  "google-plus-circle": 21942,
  "google-plus-square": 21943,
  "google-square": 21944,
  "hand-shake": 21945,
  "hdd": 21946,
  "heart": 21947,
  "highlight": 21948,
  "home": 21949,
  "hourglass": 21950,
  "html5": 21951,
  "idcard": 21952,
  "ie-circle": 21953,
  "ie-square": 21954,
  "info-circle": 21955,
  "instagram": 21956,
  "insurance": 21957,
  "interaction": 21958,
  "layout": 21959,
  "left-circle": 21960,
  "left-square": 21961,
  "like": 21962,
  "linkedin": 21963,
  "lock": 21964,
  "mac-command": 21965,
  "mail": 21966,
  "medicine-box": 21967,
  "medium-circle": 21968,
  "medium-square": 21969,
  "meh": 21970,
  "merge": 21971,
  "message": 21972,
  "minus-circle": 21973,
  "minus-square": 21974,
  "mobile": 21975,
  "money-collect": 21976,
  "moon": 21977,
  "muted": 21978,
  "notification": 21979,
  "open-a-i": 21980,
  "pause-circle": 21981,
  "pay-circle": 21982,
  "phone": 21983,
  "picture": 21984,
  "pie-chart": 21985,
  "pinterest": 21986,
  "play-circle": 21987,
  "play-square": 21988,
  "plus-circle": 21989,
  "plus-square": 21990,
  "pound-circle": 21991,
  "printer": 21992,
  "product": 21993,
  "profile": 21994,
  "project": 21995,
  "property-safety": 21996,
  "pushpin": 21997,
  "qq-circle": 21998,
  "qq-square": 21999,
  "question-circle": 22000,
  "read": 22001,
  "reconciliation": 22002,
  "red-envelope": 22003,
  "reddit-circle": 22004,
  "reddit-square": 22005,
  "rest": 22006,
  "right-circle": 22007,
  "right-square": 22008,
  "robot": 22009,
  "rocket": 22010,
  "safety-certificate": 22011,
  "save": 22012,
  "schedule": 22013,
  "security-scan": 22014,
  "setting": 22015,
  "shop": 22016,
  "shopping": 22017,
  "signal": 22018,
  "signature": 22019,
  "sketch-circle": 22020,
  "sketch-square": 22021,
  "skin": 22022,
  "skype": 22023,
  "slack-circle": 22024,
  "slack-square": 22025,
  "sliders": 22026,
  "smile": 22027,
  "snippets": 22028,
  "sound": 22029,
  "spotify": 22030,
  "star": 22031,
  "step-backward": 22032,
  "step-forward": 22033,
  "stop": 22034,
  "sun": 22035,
  "switcher": 22036,
  "tablet": 22037,
  "tag": 22038,
  "tags": 22039,
  "taobao-circle": 22040,
  "taobao-square": 22041,
  "thunderbolt": 22042,
  "tik-tok": 22043,
  "tool": 22044,
  "trademark-circle": 22045,
  "trophy": 22046,
  "truck": 22047,
  "twitch": 22048,
  "twitter-circle": 22049,
  "twitter-square": 22050,
  "unlock": 22051,
  "up-circle": 22052,
  "up-square": 22053,
  "usb": 22054,
  "video-camera": 22055,
  "wallet": 22056,
  "warning": 22057,
  "wechat": 22059,
  "wechat-work": 22058,
  "weibo-circle": 22060,
  "weibo-square": 22061,
  "windows": 22062,
  "x": 22063,
  "yahoo": 22064,
  "youtube": 22065,
  "yuque": 22066,
  "zhihu-circle": 22067,
  "zhihu-square": 22068,
}
`;
